project(uasdk_examples)
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake ${CMAKE_MODULE_PATH})
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

include(CMakeDependentOption)
include(MessageUtils)
if (CMAKE_SYSTEM_NAME STREQUAL "WindowsCE")
    include(ConfigureWCELIBCEX)
endif ()

find_package(UaOpenSSL)
find_package(UaLibXml2)

include(ConfigureCompiler)
include(ConfigureUaStack)
include(ConfigureCppSdk)

display_project_header("true")

option(BUILD_EXAMPLES "Set to ON to build the examples" ON)
cmake_dependent_option(BUILD_EXAMPLES_SERVER "Build server examples" ON "BUILD_EXAMPLES AND ( NOT DEFINED UASDK_PRODUCTCONFIG OR NOT ${UASDK_PRODUCTCONFIG} STREQUAL client )" OFF)
cmake_dependent_option(BUILD_EXAMPLES_CLIENT "Build client examples" ON "BUILD_EXAMPLES" OFF)

cmake_dependent_option(BUILD_UASERVERCPP_APP "Set to ON to build the UA C++ Server application" ON "NOT BUILD_EXAMPLES_SERVER AND ( NOT DEFINED UASDK_PRODUCTCONFIG OR NOT ${UASDK_PRODUCTCONFIG} STREQUAL client )" OFF)
cmake_dependent_option(BUILD_UACLIENTCPP_APP "Set to ON to build the UA C++ Client application" ON "NOT BUILD_EXAMPLES_CLIENT" OFF)

# server
if (BUILD_EXAMPLES_SERVER)
    add_subdirectory(server_gettingstarted/lesson01)
    add_subdirectory(server_gettingstarted/lesson02)
    add_subdirectory(server_gettingstarted/lesson03)
    add_subdirectory(server_gettingstarted/lesson04)
    add_subdirectory(server_gettingstarted/lesson05)
    add_subdirectory(server_gettingstarted/lesson06)
    add_subdirectory(server_gettingstarted/lesson07)
    if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows" AND NOT MINGW)
        add_subdirectory(server_com_da_migration)
    endif ()
    add_subdirectory(server_hello_world)
    add_subdirectory(server_sdk_tutorial)
    add_subdirectory(server_plc_data)
endif ()
if (BUILD_EXAMPLES_SERVER OR BUILD_UASERVERCPP_APP)
    add_subdirectory(server_cpp_demo)
endif ()

# client
if (BUILD_EXAMPLES_CLIENT)
    add_subdirectory(client_gettingstarted/lesson01)
    add_subdirectory(client_gettingstarted/lesson02)
    add_subdirectory(client_gettingstarted/lesson03)
    if (UASTACK_WITH_OPENSSL)
        add_subdirectory(client_gettingstarted/lesson04)
        add_subdirectory(client_gettingstarted/lesson05)
        add_subdirectory(client_gettingstarted/lesson06)
    endif ()
endif ()
if (BUILD_EXAMPLES_CLIENT OR BUILD_UACLIENTCPP_APP)
    add_subdirectory(client_cpp_sdk)
endif ()
